--- a/styles/style.css
+++ b/styles/style.css
@@ -174,6 +174,7 @@ border:1px solid;
 	.navbar-brand > img {
 	   max-height: 80px;
 	}
+
 }
 
 
@@ -188,3 +189,8 @@ border:1px solid;
   480px in width.
   */
  
+@media screen and (min-width: 480px) {
+	.h1.display-3 > img {
+	max-height: 40px;
+}
+
